# dictionaries

./: .gitignore  .travis.yml  CHANGELOG.md  README.md  default.nix  dictionaries.cabal  shell.nix
src/NLP/: Dictionary.hs
src/NLP/Dictionary/: StarDict.hs
src/NLP/Dictionary/StarDict/: Common.hs  InMemory.hs  Regular.hs
test/: Main.hs
tests/: Benchmark.hs  Test.hs  Utils.hs
