name:                dictionaries
version:             0.1.0.0
-- synopsis:
-- description:
license:             BSD3
license-file:        LICENSE
author:              Al Zohali
maintainer:          zohl@fmap.me
-- copyright:
category:            Text
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

flag dev
  description:        Turn on development settings.
  manual:             True
  default:            False

library
  exposed-modules:
    NLP.Dictionary
    NLP.Dictionary.StarDict
    NLP.Dictionary.StarDict.InMemory
  -- other-modules:
  -- other-extensions:
  build-depends: base >=4.8 && <5.0
               , attoparsec
               , binary
               , bytestring
               , containers
               , data-default
               , directory
               , exceptions
               , filepath
               , text
               , time
               , zlib
  hs-source-dirs:      src
  default-language:    Haskell2010


executable test
  hs-source-dirs:     test
  main-is:            Main.hs
  build-depends: base >= 4.7 && < 5.0
               , dictionaries

  default-language:    Haskell2010

  if flag(dev)
    ghc-options:      -Wall -Werror
  else
    ghc-options:      -O2 -Wall
