name:                dictionaries
version:             0.1.0.0
synopsis:            Tools to handle StarDict dictionaries.
-- description:
license:             BSD3
license-file:        LICENSE
author:              Al Zohali
maintainer:          zohl@fmap.me
-- copyright:
category:            Text
build-type:          Simple
cabal-version:       >=1.10

flag dev
  description:        Turn on development settings.
  manual:             True
  default:            False

source-repository head
  type:     git
  location: https://github.com/zohl/dictionaries.git

library
  exposed-modules:
    NLP.Dictionary
    NLP.Dictionary.StarDict
    NLP.Dictionary.StarDict.InMemory

  build-depends: base
               , attoparsec
               , binary
               , bytestring
               , containers
               , data-default
               , directory
               , exceptions
               , filepath
               , text
               , time
               , transformers
               , zlib
  hs-source-dirs:      src
  default-language:    Haskell2010
